--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
       - "443:443"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ${VOLUME_BASE_PATH}/${TRAEFIK_LETSENCRYPT_PATH}:/letsencrypt
+      - traefik_letsencrypt:/letsencrypt
     networks:
       - traefik
     logging:
@@ -90,6 +90,9 @@ services:
       options:
         max-size: "20m"
         max-file: "4"
+
+volumes:
+  traefik_letsencrypt:
 
 networks:
   internal:
